--- a/openApiSpec/package.json
+++ b/openApiSpec/package.json
@@ -2,7 +2,7 @@
   "name": "openapispec",
   "version": "1.0.0",
   "main": "index.js",
-  "type" : "module",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "swagger-ui-express": "^5.0.1"
   }
 }
